<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="kr.nearbyme.nbm.Setting.SettingActivity"
    tools:showIn="@layout/activity_setting2">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Setting_info"
        android:id="@+id/btn_info"
        android:layout_marginTop="41dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Setting_personinfo"
        android:id="@+id/btn_personinfo"
        android:layout_below="@+id/btn_info"
        android:layout_alignLeft="@+id/btn_info"
        android:layout_alignStart="@+id/btn_info"
        android:layout_marginTop="41dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Setting_locationinfo"
        android:id="@+id/btn_locationinfo"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Setting_logout"
        android:id="@+id/btn_logout"
        android:layout_below="@+id/btn_locationinfo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Setting_delete"
        android:id="@+id/btn_delete"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/btn_logout"
        android:layout_alignStart="@+id/btn_logout" />


</RelativeLayout>
